Install CM
Install CM spark